# chimera-meade

./: README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml
chimera_meade/instruments/: meade.py
src/chimera_meade/: meade.py
